erDiagram
    USER {
      string id PK
      string email UK
      string password "bcrypt hash"
      datetime createdAt
    }
    PRODUCT {
      string id PK
      string title
      string imageUrl
      datetime createdAt
    }
    OFFER {
      string id PK
      string productId FK
      enum   marketplace "LAZADA | SHOPEE"
      string storeName
      decimal price
      string currency
      string externalUrl
      string externalId
      datetime lastCheckedAt
    }
    CAMPAIGN {
      string id PK
      string name
      string utmSource
      string utmMedium
      string utmCampaign
      datetime startAt
      datetime endAt
    }
    LINK {
      string id PK
      string productId FK
      string campaignId FK
      enum   marketplace
      string shortCode UK
      string targetUrl
      datetime createdAt
    }
    CLICK {
      string id PK
      string linkId FK
      datetime timestamp
      string referrer
      string userAgent
      string ipHash "sha256(ip + salt)"
    }
    IMPRESSION {
      string id PK
      string linkId FK
      datetime timestamp
      string referrer
      string userAgent
      string ipHash
    }

    PRODUCT  ||--o{ OFFER       : "has"
    PRODUCT  ||--o{ LINK        : "promoted by"
    CAMPAIGN ||--o{ LINK        : "groups"
    LINK     ||--o{ CLICK       : "tracked by"
    LINK     ||--o{ IMPRESSION  : "viewed via"
